Get request using retrofit

--- a/flutter-ui/Picsy App/picsy_app/pubspec.yaml
+++ b/flutter-ui/Picsy App/picsy_app/pubspec.yaml
@@ -23,16 +23,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  retrofit: any
+  json_serializable: any
+  dio:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  retrofit_generator: any
+  build_runner: any
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
